2015-01-17  Axel Beckert  <abe@deuxchevaux.org>

	* 34314: Wieland Hoffmann: Completion/Unix/Command/_git: Change
	one --validate to --no-validate

2015-01-16  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Src/hist.c: fix another dubious comment.

	* unposted: Src/hist.c: improve confusing comment in previous
	commit.

	* 34313: Src/hist.c, Src/lex.c: need to turn off history
	word markers when parsing command substitution.

2015-01-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 34304: Src/lex.c: improve use of new command substitution
	parsing in completion.

2015-01-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 34290 (correcting typo): README: note FORCE_FLOAT behaviour change.

	* 34280: Doc/Zsh/options.yo, Src/math.c, Test/C01arith.ztst:
	make FORCE_FLOAT option also cover variables when read for
	use in arithmetic expressions.

	* 34287 (see 34286 from Markus Trippelsdorf): Src/zsh.mdd:
	use -E argument for generating signal names if gcc is
	preprocessor.

2015-01-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 34283: Test/X02zlevi.ztst: also needs zpty.

	* 34275: Test/V08zpty.ztst,  Test/Y01completion.ztst,
	Test/Y02compmatch.ztst,  Test/Y03arguments.ztst: assume zpty
	doesn't work under Cygwin.

2015-01-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 34273: Doc/Zsh/compsys.yo: use a sufficient number of colons
	in example style patterns to assure fixed strings can't match
	the wrong field positions

2015-01-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: README: fix deliberate error in previous update.

2015-01-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 34260: Eric Cook: Completion/Unix/Command/_ip: relax
	restriction on interface names.

	* 34259: Eric Cook: Completion/Unix/Command/_ip: fix variable
	declarations.

2015-01-12  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: .gitignore: add Src/zsh.exe for Cygwin.

	* 34255: README, Src/math.c, Test/C01arith.ztst: propagate type